[package]
name = "taple-sc-rust"
version = "0.3.0-dev"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE smart contracts SDK"
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-sc-rust"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
json-patch = "1"
thiserror = "1"
borsh = "0.10.3"

[lib]
crate-type = ["cdylib", "rlib"]
