[package]
name = "example"
version = "0.3.0"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE smart contracts example"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-sc-rust"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
taple-sc-rust = { path = "../" }